[package]
name = "cloud-lint"
version = "0.1.0"
authors = ["tom <t.bladenhovell@yahoo.co.uk>"]
edition = "2018"
categories = ["command-line-utilities"]
keywords = ["cloud", "lint", "compliance"]
license = "MPL-2.0"
repository = "https://github.com/TBladen/cloud-lint"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33"
nom = "5"
regex = "1"
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
serde_json = "1.0"
